--- a/ru/tools.html
+++ b/ru/tools.html
@@ -8,24 +8,35 @@
   <link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
 <body>
-#### Исправление ошибок в GXT
+#### Исправление ошибок в FXT
 Вставьте сюда текст:
 
 <pre id="input" contenteditable="true" class="h-33">
+@LPG02 Hello bro :D
+kkkkkk ÀÁÂÃÄÅÆÇÈÉÊËÌÍÎÏÐÑÒÓÔÕÖ
+llllll ÙÚÛÜÝÞßàáâãäåæçèéêëìíî
+oooooo ïðñòóôõö÷øùúûüýþÿ¨¸ªº
 EJEMPLO aquí uno con errores         
 8767 á Á ñoquíz ó ú ñ ñ 
 asd@q asd UYYGBJKGU      
 JKSD 
-@LPG02 Hello Woppy
 </pre>
 
 ```h-33#output
 ```
 
+:::row
+:::col-6
 :::my-3
 [скопировать в буфер обмена](#! 'bg-teal black py-2 px-3' `
   CopyTextContent($('#output'))
 `):::
+:::
+:::col-6
+[blue][`abc`] ключ удачно расположен\
+[code bg-red black bold][abd] ключ плохо расположен
+:::
+:::
 
 <script src="../js/main.min.js"></script>
 <script>
@@ -35,28 +46,21 @@ function render(){
   var input = $("#input").innerText + '\n'
 
   var tras = [
-    ["Á", ""],
-    ["É", "‡"],
-    ["Í", "‹"],
-    ["Ó", ""],
-    ["Ú", "“"],
-    ["Ü", "•"],
-    ["Ñ", "­"],
-    ["á", "˜"],
-    ["é", "ž"],
-    ["è", ""],
-    ["í", "¢"],
-    ["ï", "¤"],
-    ["ó", "¦"],
-    ["ö", "¨"],
-    ["ú", "ª"],
-    ["ü", "¬"],
-    ["ñ", "®"],
-    ["¿", "¯"],
-    ["¡", "^"],
-    ["°", "|"],
-    ["&", "*"],
-    ["ç", "œ"]
+    ["¡", "^"],      ["Ä", "ƒ"],      ["Æ", "„"],      ["æ", "›"],
+    ["Á", ""], ["Ã", "Ä"],      ["À", "€"],      ["Â", "‚"],
+    ["É", "‡"],      ["Ë", "‰"],      ["È", "†"],      ["Ê", "ˆ"],
+    ["Í", "‹"],      ["Ï", ""], ["Ì", "Š"],      ["Î", "Œ"],
+    ["Ó", ""], ["Ö", "‘"],      ["Ò", "Ž"],      ["Ô", ""],
+    ["Ú", "“"],      ["Ü", "•"],      ["Ù", "’"],      ["Û", "”"],
+    ["Ñ", "­"], ["º", "|"],      ["Ç", "…"],      ["°", "|"],
+    ["á", "˜"],      ["ä", "š"],      ["à", "—"],      ["â", "™"],
+    ["é", "ž"],      ["ë", " "], ["è", ""], ["ê", "Ÿ"],
+    ["í", "¢"],      ["ï", "¤"],      ["ì", "¡"],      ["î", "£"],
+    ["ó", "¦"],      ["¿", "¯"],      ["ò", "¥"],      ["ô", "§"],
+    ["ü", "¬"],      ["ù", "©"],      ["&", "*"],
+    ["û", "«"],      ["ñ", "®"],      ["ç", "œ"],      ["ß", "–"],
+    ["ö", "🧐"],     ["ú", "🥂"],    ["¨", "🍷"],      ["ª", "😎"],
+    ["🧐", "¨"],     ["🥂", "ª"],    ["🍷", "ö"],      ["😎", "ú"]
   ].forEach(function(e){
     input = input.rA(e[0], e[1])
   })
