--- a/en/scm-documentation/sa/weapons.html
+++ b/en/scm-documentation/sa/weapons.html
@@ -14,52 +14,52 @@ Weapon IDs are used with
 01B9: set_actor $PLAYER_ACTOR armed_weapon_to <,id>
 ```
 and similar opcodes.
-|Name|ID|Model|Group|GUI|GXT|
+|Name|ID|Model|Group|GUI|GXT \s [DE](#! "Definitive Edition" 'bg-yellow black bold p-1 px-0 r-1' `apply($('.d-none'), (e) => {e.toggle()})`)|
 |-|
-|Unarmed|0|0<hr>0|1|![](%sa-w/fist.png)|WEAP00|
-|Brass Knuckles|1|brassknuckle<hr>331|1|![](%sa-w/BRASSKNUCKLEicon.png)|WEAP01|
-|Golf Club|2|golfclub<hr>333|2|![](%sa-w/golfclubicon.png)|WEAP02|
-|Night Stick|3|nitestick<hr>334|2|![](%sa-w/nitestickicon.png)|WEAP03|
+|Unarmed|0|0<hr>0|1|![](%sa-w/fist.png)|[d-none yellow][WEAP00]|
+|Brass Knuckles|1|brassknuckle<hr>331|1|![](%sa-w/BRASSKNUCKLEicon.png)|[d-none yellow][WEAP01]|
+|Golf Club|2|golfclub<hr>333|2|![](%sa-w/golfclubicon.png)|[d-none yellow][WEAP02]|
+|Night Stick|3|nitestick<hr>334|2|![](%sa-w/nitestickicon.png)|[d-none yellow][WEAP03]|
 |Knife|4|knifecur<hr>335|2|![](%sa-w/knifecuricon.png)|KNIFE|
 |Baseball Bat|5|bat<hr>336|2|![](%sa-w/baticon.png)|BASEBAT|
-|Shovel|6|shovel<hr>337|2|![](%sa-w/shovelicon.png)|WEAP04|
-|Pool cue|7|poolcue<hr>338|2|![](%sa-w/poolcueicon.png)|WEAP05|
+|Shovel|6|shovel<hr>337|2|![](%sa-w/shovelicon.png)|[d-none yellow][WEAP04]|
+|Pool cue|7|poolcue<hr>338|2|![](%sa-w/poolcueicon.png)|[d-none yellow][WEAP05]|
 |Katana|8|katana<hr>339|2|![](%sa-w/katanaicon.png)|KATANA|
 |Chainsaw|9|chnsaw<hr>341|2|![](%sa-w/chnsawicon.png)|CHAINSA|
-|Purple Dildo|10|gun_dildo1<hr>321|11|![](%sa-w/gun_dildo1icon.png)|WEAP07|
-|White Dildo|11|gun_dildo2<hr>322|11|![](%sa-w/gun_dildo2icon.png)|WEAP06|
-|Long White Dildo|12|gun_vibe1<hr>323|11|![](%sa-w/gun_vibe1icon.png)|WEAP09|
+|Purple Dildo|10|gun_dildo1<hr>321|11|![](%sa-w/gun_dildo1icon.png)|[d-none yellow][WEAP07]|
+|White Dildo|11|gun_dildo2<hr>322|11|![](%sa-w/gun_dildo2icon.png)|[d-none yellow][WEAP06]|
+|Long White Dildo|12|gun_vibe1<hr>323|11|![](%sa-w/gun_vibe1icon.png)|[d-none yellow][WEAP09]|
 |White Dildo 2|13|gun_vibe2<hr>324|11|![](%sa-w/gun_vibe2icon.png)|\s|
-|Flowers|14|flowera<hr>325|11|![](%sa-w/floweraicon.png)|WEAP10|
+|Flowers|14|flowera<hr>325|11|![](%sa-w/floweraicon.png)|[d-none yellow][WEAP10]|
 |Cane|15|gun_cane<hr>326|11|![](%sa-w/gun_caneicon.png)|\s|
 |Grenades|16|grenade<hr>342|9|![](%sa-w/grenadeicon.png)|GRENADE|
-|Tear Gas|17|teargas<hr>343|9|![](%sa-w/TearGasicon.png)|WEAP11|
-|Molotovs|18|molotovs<hr>334|9|![](%sa-w/molotovicon.png)|WEAP12|
+|Tear Gas|17|teargas<hr>343|9|![](%sa-w/TearGasicon.png)|[d-none yellow][WEAP11]|
+|Molotovs|18|molotovs<hr>334|9|![](%sa-w/molotovicon.png)|[d-none yellow][WEAP12]|
 |Pistol|22|colt45<hr>346|3|![](%sa-w/colt45icon.png)|STWE001|
 |Silenced Pistol|23|silenced<hr>347|3|![](%sa-w/silencedicon.png)|STWE002|
 |Desert Eagle|24|desert_eagle<hr>348|3|![](%sa-w/desert_eagleicon.png)|STWE003|
-|Shotgun|25|chromegun<hr>349|4|![](%sa-w/chromegunicon.png)|STWE004|
-|Sawn Off Shotgun|26|sawnoff<hr>350|4|![](%sa-w/sawnofficon.png)|STWE005|
-|Combat Shotgun|27|shotgspa<hr>351|4|![](%sa-w/shotgspaicon.png)|STWE006|
+|Shotgun|25|chromegun<hr>349|4|![](%sa-w/chromegunicon.png)|SHOTGN1|
+|Sawn Off Shotgun|26|sawnoff<hr>350|4|![](%sa-w/sawnofficon.png)|SHOTGN3|
+|Combat Shotgun|27|shotgspa<hr>351|4|![](%sa-w/shotgspaicon.png)|SHOTGN2|
 |Micro UZI|28|micro_uzi<hr>352|5|![](%sa-w/micro_uziicon.png)|UZI|
-|MP5|29|mp5lng<hr>353|5|![](%sa-w/mp5lngicon.png)|STWE008|
-|AK47|30|ak47<hr>355|6|![](%sa-w/ak47icon.png)|STWE009|
-|M4|31|m4<hr>356|6|![](%sa-w/M4icon.png)|STWE010|
-|Tec9|32|tec9<hr>372|5|![](%sa-w/tec9icon.png)|STWE011|
+|MP5|29|mp5lng<hr>353|5|![](%sa-w/mp5lngicon.png)|MP5|
+|AK47|30|ak47<hr>355|6|![](%sa-w/ak47icon.png)|AK|
+|M4|31|m4<hr>356|6|![](%sa-w/M4icon.png)|M4|
+|Tec9|32|tec9<hr>372|5|![](%sa-w/tec9icon.png)|TEC9|
 |Rifle|33|cuntgun<hr>357|7|![](%sa-w/cuntgunicon.png)|RIFLE|
 |Sniper Rifle|34|sniper<hr>358|7|![](%sa-w/SNIPERicon.png)|SNIPER|
 |Rocket Launcher|35|rocketla<hr>359|8|![](%sa-w/rocketlaicon.png)|ROCKET|
 |Heat Seeking Rocket Launcher|36|heatseek<hr>360|8|![](%sa-w/heatseekicon.png)|ROCKHS|
 |Flame Thrower|37|flame<hr>361|8|![](%sa-w/flameicon.png)|FLAMET|
 |Minigun|38|minigun<hr>362|8|![](%sa-w/minigunicon.png)|MINIGU|
-|Sachet Charges|39|satchel<hr>363|9|![](%sa-w/satchelicon.png)|WEAP25|
-|Detonator|40|remote<hr>364|13|![](%sa-w/bombicona.png)|WEAP40|
-|Spray Paint|41|spraycan<hr>365|10|![](%sa-w/SPRAYCANicon.png)|WEAP13|
-|Fire Extinguisher|42|fire_ex<hr>366|10|![](%sa-w/fire_exicon.png)|WEAP14|
-|Camera|43|camera<hr>367|10|![](%sa-w/Cameraicon.png)|WEAP15|
-|Nightvision Goggles|44|nvgoggles<hr>368|12|![](%sa-w/irgogglesicon.png)|WEAP16|
-|Thermal Goggles|45|irgoggles<hr>369|12|![](%sa-w/irgogglesicon.png)|WEAP17|
-|Parachute|46|gun_para<hr>371|12|![](%sa-w/gun_paraIcon.png)|WEAP18|
+|Sachet Charges|39|satchel<hr>363|9|![](%sa-w/satchelicon.png)|DETONA[d-none yellow][\nWEAP25]|
+|Detonator|40|remote<hr>364|13|![](%sa-w/bombicona.png)|[d-none yellow][WEAP40]|
+|Spray Paint|41|spraycan<hr>365|10|![](%sa-w/SPRAYCANicon.png)|[d-none yellow][WEAP13]|
+|Fire Extinguisher|42|fire_ex<hr>366|10|![](%sa-w/fire_exicon.png)|[d-none yellow][WEAP14]|
+|Camera|43|camera<hr>367|10|![](%sa-w/Cameraicon.png)|[d-none yellow][WEAP15]|
+|Nightvision Goggles|44|nvgoggles<hr>368|12|![](%sa-w/irgogglesicon.png)|[d-none yellow][WEAP16]|
+|Thermal Goggles|45|irgoggles<hr>369|12|![](%sa-w/irgogglesicon.png)|[d-none yellow][WEAP17]|
+|Parachute|46|gun_para<hr>371|12|![](%sa-w/gun_paraIcon.png)|DESERT7[d-none yellow][\nWEAP18]|
 |Jetpack|\s|jetpack<hr>370|\s|![](%sa-w/jetpackicon.png)|\s|
 |Cellphone|\s|cellphone<hr>330|\s|![](%sa-w/cellphoneicon.png)|\s|
 
