--- a/es/coding/built-in-commands.html
+++ b/es/coding/built-in-commands.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-Los siguientes comandos están integrados directamente en el compilador y sirven principalmente como [azúcar sintáctico](https://en.wikipedia.org/wiki/Syntactic_sugar).
+Los siguientes comandos están integrados directamente en el compilador y sirven principalmente como [azúcar sintáctico](https://es.wikipedia.org/wiki/Az%C3%BAcar_sint%C3%A1ctico)
 
 ## INC
 
