--- a/es/scm-documentation/sa/weather.html
+++ b/es/scm-documentation/sa/weather.html
@@ -16,27 +16,27 @@ Definiciones: **L**os **S**antos, **S**an **F**ierro, **L**as **V**enturas, **C*
 :::
 |Descripción|ID|GXT|
 |-|
-|LA: Extra soleado|0|WEATH0|
-|LA: Soleado|1|WEATH1|
-|LA: Nublado Extra Brillante|2|WEATH2|
-|LA: Nublado oscura|3|WEATH3|
-|LA: Nublado|4|WEATH4|
-|SF: Soleado|5|WEATH5|
-|SF: Extra Soleado|6|WEATH6|
-|SF: Nublado|7|WEATH7|
-|SF: Lluvioso|8|WEATH8|
-|SF: Nublado|9|WEATH9|
-|LV: Soleado|10|WEATH10|
-|LV: Extra Soleado|11|WEATH11|
-|LV: Nublado|12|WEATH12|
-|C: Extra Soleado|13|WEATH13|
-|C: Soleado|14|WEATH14|
-|C: Nublado|15|WEATH15|
-|C: Lluvioso|16|WEATH16|
-|D: Extra Soleado|17|WEATH17|
-|D: Soleado|18|WEATH18|
-|D: Tormenta de arena|19|WEATH19|
-|S: Bajo el agua|20|WEATH20|
-|S: Extracoloridos 1|21|WEATH21|
-|S: Extracoloridos 2|22|WEATH22|
+|LA: Extra soleado|0|DEBW0|
+|LA: Soleado|1|DEBW1|
+|LA: Nublado Extra Brillante|2|DEBW2|
+|LA: Nublado oscura|3|DEBW3|
+|LA: Nublado|4|DEBW4|
+|SF: Soleado|5|DEBW5|
+|SF: Extra Soleado|6|DEBW6|
+|SF: Nublado|7|DEBW7|
+|SF: Lluvioso|8|DEBW8|
+|SF: Nublado|9|DEBW9|
+|LV: Soleado|10|DEBW10|
+|LV: Extra Soleado|11|DEBW11|
+|LV: Nublado|12|DEBW12|
+|C: Extra Soleado|13|DEBW13|
+|C: Soleado|14|DEBW14|
+|C: Nublado|15|DEBW15|
+|C: Lluvioso|16|DEBW16|
+|D: Extra Soleado|17|DEBW17|
+|D: Soleado|18|DEBW18|
+|D: Tormenta de arena|19|DEBW19|
+|S: Bajo el agua|20|DEBW20|
+|S: Extracoloridos 1|21|DEBW21|
+|S: Extracoloridos 2|22|DEBW22|
 <script src="../../../js/main.min.js"></script>
