--- a/es/tools.html
+++ b/es/tools.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
 <body>
-#### Reparar Errores en FXT
+#### Depurador para FXT
 Pegue aqui el texo:
 
 <pre id="input" contenteditable="true" class="h-33">
@@ -47,14 +47,14 @@ function render(){
 
   var tras = [
     ["¡", "^"],      ["Ä", "ƒ"],      ["Æ", "„"],      ["æ", "›"],
-    ["Á", ""], ["Ã", "Ä"],      ["À", "€"],      ["Â", "‚"],
+    ["Á", "\x81"],   ["Ã", "Ä"],      ["À", "€"],      ["Â", "‚"],
     ["É", "‡"],      ["Ë", "‰"],      ["È", "†"],      ["Ê", "ˆ"],
-    ["Í", "‹"],      ["Ï", ""], ["Ì", "Š"],      ["Î", "Œ"],
-    ["Ó", ""], ["Ö", "‘"],      ["Ò", "Ž"],      ["Ô", ""],
+    ["Í", "‹"],      ["Ï", "\x8D"],   ["Ì", "Š"],      ["Î", "Œ"],
+    ["Ó", "\x8F"],   ["Ö", "‘"],      ["Ò", "Ž"],      ["Ô", "\x90"],
     ["Ú", "“"],      ["Ü", "•"],      ["Ù", "’"],      ["Û", "”"],
-    ["Ñ", "­"], ["º", "|"],      ["Ç", "…"],      ["°", "|"],
+    ["Ñ", "\xAD"],   ["º", "|"],      ["Ç", "…"],      ["°", "|"],
     ["á", "˜"],      ["ä", "š"],      ["à", "—"],      ["â", "™"],
-    ["é", "ž"],      ["ë", " "], ["è", ""], ["ê", "Ÿ"],
+    ["é", "ž"],      ["ë", "\xA0"],   ["è", "\x9D"],   ["ê", "Ÿ"],
     ["í", "¢"],      ["ï", "¤"],      ["ì", "¡"],      ["î", "£"],
     ["ó", "¦"],      ["¿", "¯"],      ["ò", "¥"],      ["ô", "§"],
     ["ü", "¬"],      ["ù", "©"],      ["&", "*"],
