--- a/ru/scm-documentation/sa/radar-icons.html
+++ b/ru/scm-documentation/sa/radar-icons.html
@@ -11,13 +11,12 @@
 ```sb3
 02A7: 0@ = create_icon_marker_and_sphere <,ID> at 892.75 -425.75 13.875
 ```
-
-|Description|ID|GUI|GXT|
+|Описание|ID|GUI|GXT|
 |-|
-|небольшой желтый квадрат|0|![](%sa-r/icon0.gif)|LG_50|
-|белый квадрат|1|![](%sa-r/icon1.gif)|LG_54|
-|позиция игрока|2|![](%sa-r/icon2.gif)|LG_01|
-|позиция игрока, которая отображается на большой карте в меню|3|![](%sa-r/icon3.gif)|LG_64|
+|небольшой желтый квадрат|0|![](%sa-r/icon0.gif)|\s|
+|Назначения\nОбъект\nДруг\nУгроза|1|![](%sa-r/icon1.gif)|LG_49\nLG_50\nLG_54\nLG_55|
+|позиция игрока|2|![](%sa-r/icon2.gif)|\s|
+|позиция игрока, которая отображается на большой карте в меню|3|![](%sa-r/icon3.gif)|LG_01|
 |север(буква N)|4|![](%sa-r/icon4.gif)|\s|
 |кладбище самолётов|5|![](%sa-r/icon5.gif)|LG_02|
 |аммунация|6|![](%sa-r/icon6.gif)|LG_03|
@@ -26,11 +25,11 @@
 |якорь ( Docks)|9|![](%sa-r/icon9.gif)|LG_06|
 |Выстрел бургера|10|![](%sa-r/icon10.gif)|LG_07|
 |Карьер|11|![](%sa-r/icon11.gif)|LG_66|
-|Каталина|12|![](%sa-r/icon12.gif)|LG_08|
+|Каталина|12|![](%sa-r/icon12.gif)|LG_08\nLG_09|
 |Цезарь|13|![](%sa-r/icon13.gif)|LG_10|
 |Закусочная 'Циплёнок'|14|![](%sa-r/icon14.gif)|LG_11|
 |дом CJ'я|15|![](%sa-r/icon15.gif)|LG_12|
-|буква С, но с мигалкой посредине|16|![](%sa-r/icon16.gif)|LG_13|
+|буква С, но с мигалкой посредине|16|![](%sa-r/icon16.gif)|LG_13\nLG_14|
 |мороженное|17|![](%sa-r/icon17.gif)|LG_67|
 |Emmet|18|![](%sa-r/icon18.gif)|LG_15|
 |Вражеская атака|19|![](%sa-r/icon19.gif)|LG_16|
@@ -51,11 +50,11 @@
 |Ryder|34|![](%sa-r/icon34.gif)|LG_31|
 |Сохранение|35|![](%sa-r/icon35.gif)|LG_32|
 |школа|36|![](%sa-r/icon36.gif)|LG_33|
-|Неизвестный|37|![](%sa-r/icon37.gif)|LG_63|
+|Интерес игрока\nТайна (Неизвестный)|37|![](%sa-r/icon37.gif)|LG_56\nLG_63|
 |Sweet|38|![](%sa-r/icon38.gif)|LG_35|
 |Татуировки|39|![](%sa-r/icon39.gif)|LG_36|
 |The Truth|40|![](%sa-r/icon40.gif)|LG_37|
-|указатель пути|41|![](%sa-r/icon41.gif)|LG_38|
+|указатель пути|41|![](%sa-r/icon41.gif)|LG_64|
 |Ранчо Торено|42|![](%sa-r/icon42.gif)|LG_39|
 |Триады|43|![](%sa-r/icon43.gif)|LG_40|
 |Казино Триад|44|![](%sa-r/icon44.gif)|LG_41|
