--- a/ru/scm-documentation/sa/weather.html
+++ b/ru/scm-documentation/sa/weather.html
@@ -16,27 +16,27 @@
 :::
 |Описание|ID|GXT|
 |-|
-|LA: Extra Sunny|0|WEATH0|
-|LA: Sunny|1|WEATH1|
-|LA: Extra Sunny Smog|2|WEATH2|
-|LA: Sunny Smog|3|WEATH3|
-|LA: Cloudy|4|WEATH4|
-|SF: Sunny|5|WEATH5|
-|SF: Extra Sunny|6|WEATH6|
-|SF: Cloudy|7|WEATH7|
-|SF: Rainy|8|WEATH8|
-|SF: Foggy|9|WEATH9|
-|LV: Sunny|10|WEATH10|
-|LV: Extra Sunny|11|WEATH11|
-|LV: Cloudy|12|WEATH12|
-|C: Extra Sunny|13|WEATH13|
-|C: Sunny|14|WEATH14|
-|C: Cloudy|15|WEATH15|
-|C: Rainy|16|WEATH16|
-|D: Extra Sunny|17|WEATH17|
-|D: Sunny|18|WEATH18|
-|D: Sandstorm|19|WEATH19|
-|S: Underwater|20|WEATH20|
-|S: Extracolours 1|21|WEATH21|
-|S: Extracolours 2|22|WEATH22|
+|LA: Extra Sunny|0|DEBW0|
+|LA: Sunny|1|DEBW1|
+|LA: Extra Sunny Smog|2|DEBW2|
+|LA: Sunny Smog|3|DEBW3|
+|LA: Cloudy|4|DEBW4|
+|SF: Sunny|5|DEBW5|
+|SF: Extra Sunny|6|DEBW6|
+|SF: Cloudy|7|DEBW7|
+|SF: Rainy|8|DEBW8|
+|SF: Foggy|9|DEBW9|
+|LV: Sunny|10|DEBW10|
+|LV: Extra Sunny|11|DEBW11|
+|LV: Cloudy|12|DEBW12|
+|C: Extra Sunny|13|DEBW13|
+|C: Sunny|14|DEBW14|
+|C: Cloudy|15|DEBW15|
+|C: Rainy|16|DEBW16|
+|D: Extra Sunny|17|DEBW17|
+|D: Sunny|18|DEBW18|
+|D: Sandstorm|19|DEBW19|
+|S: Underwater|20|DEBW20|
+|S: Extracolours 1|21|DEBW21|
+|S: Extracolours 2|22|DEBW22|
 <script src="../../../js/main.min.js"></script>
