--- a/test/markdown/cheatsheel.html
+++ b/test/markdown/cheatsheel.html
@@ -54,6 +54,7 @@ Normal
 \*\*Bold\*\*
 \*\*\*Itatic Bold\*\*\*
 \_Addressed\_
+\~Subscript\~
 ```:::
 :::col-3 px-2
 ```md
@@ -62,12 +63,14 @@ Normal
 \+\+Inserted\+\+
 \=\=Marked\=\=
 \`Monospaced\`
+\^Superscript\^
 ```:::
 :::col-3 py-2
 Normal\
 *Itatic*\
 **Bold**\
-***Itatic Bold***
+***Itatic Bold***\
+~Subscript~
 _Addressed_
 :::
 :::col-3 py-2
@@ -75,6 +78,7 @@ __Underlined__\
 ~~Sublined~~\
 ++Inserted++\
 ==Marked==\
+^Superscript^\
 `Monospaced`
 :::
 :::
@@ -177,7 +181,7 @@ customed...
 ```
 :::col-6 p-2 px-3
 [to section](#lists)\
-[local file](cheatsheel.html)\
+[local file](html.html)\
 [external page](https://google.com)\
 [to javascripts](#! `alert('test')`)
 :::
