--- a/test/markdown/html.html
+++ b/test/markdown/html.html
@@ -13,12 +13,16 @@
 Markdown - **By MatiDragon**
 ========================
 
-[x] [lorem][]Lorem, __ipsum__ dolor :clap: sit amet **consectetur** adipisicing, elit.
-[] Nam ~~animi~~ *mollitia* nesciunt ***reprehenderit***, voluptate [error](#how-to-use-the-demo 'orange') similique saepe.
+[x] [lorem][]Lorem, __ipsum__ dolo~r~ :clap: sit amet **consectetur** adipisicing, elit.
+[] Nam ~~animi~~ *mollitia* nesciun^t^ ***reprehenderit***, voluptate [error](#how-to-use-the-demo 'orange') similique saepe.
 
 | table | number one |
-| ----- | ---------- |
-| jejeje|Dolorem ++provident++ officia `magnam` rerum [red][laboriosam] quas id a [`excepturi`](#how-to-use-the-demo "read labo id qusa") perspiciatis ==exercitationem==. Esse.|
+|-|
+| jejeje|Dolorem ++provident++ officia `magnam` rerum [red][laboriosam] quas id a [`excepturi`](#how-to-use-the-demo "read labo id qusa") perspiciatis ==exercitationem==. _Esse_|
+
+|right|left|center|
+|----:|:---|:----:|
+|text |text|text  |
 
 :::center p-2
 [Enter to Google](https://google.com "at new window") \| [Relogin `.MD`](html.md "MD transformed at HTML") \| [Run JavaScript](#! "no is fake" 'bg-yellow black py-1 px-2 bold#run_js' `$('#show').toggle()`)
@@ -66,13 +70,13 @@ Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
 Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
 
 {% hint style="warning" %}
-Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
+:warning: Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
 
 > jolas ko sit 
 
 {% hint style="info" %}
 
-Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
+:bulb: Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
 > jolas ko sit 
 
 {% endhint %}
