--- a/en/scm-documentation/sa/radar-icons.html
+++ b/en/scm-documentation/sa/radar-icons.html
@@ -13,69 +13,69 @@
 ```
 |Description|ID|GUI|GXT|
 |-|
-|small yellow square|0|![](%sa-r/icon0.gif)|LG_50|
-|Friend|1|![](%sa-r/icon1.gif)|LG_54|
-|Player position|2|![](%sa-r/icon2.gif)|LG_01|
-|Arrow (Menu-card)|3|![](%sa-r/icon3.gif)|LG_64|
+|Yellow square|0|![](%sa-r/icon0.gif)|\s|
+|Destination\nObject\nFriend\nThreat|1|![](%sa-r/icon1.gif)|LG_49\nLG_50\nLG_54\nLG_55|
+|Player|2|![](%sa-r/icon2.gif)|\s|
+|Player position|3|![](%sa-r/icon3.gif)|LG_01|
 |North|4|![](%sa-r/icon4.gif)|\s|
-|Airport|5|![](%sa-r/icon5.gif)|LG_02|
+|Air yard (Airport)|5|![](%sa-r/icon5.gif)|LG_02|
 |Ammu Nation|6|![](%sa-r/icon6.gif)|LG_03|
-|Barber|7|![](%sa-r/icon7.gif)|LG_04|
+|Barbers|7|![](%sa-r/icon7.gif)|LG_04|
 |Big Smoke|8|![](%sa-r/icon8.gif)|LG_05|
-|Docks|9|![](%sa-r/icon9.gif)|LG_06|
+|Boat Yard (Docks)|9|![](%sa-r/icon9.gif "bg-white")|LG_06|
 |Burger Shot|10|![](%sa-r/icon10.gif)|LG_07|
 |Bulldozer|11|![](%sa-r/icon11.gif)|LG_66|
-|Catalina|12|![](%sa-r/icon12.gif)|LG_08|
-|Cesar Viapando|13|![](%sa-r/icon13.gif)|LG_10|
-|Chicken|14|![](%sa-r/icon14.gif)|LG_11|
-|Carl Johnson|15|![](%sa-r/icon15.gif)|LG_12|
-|Crash|16|![](%sa-r/icon16.gif)|LG_13|
-|Dinner|17|![](%sa-r/icon17.gif)|LG_67|
+|Catalina|12|![](%sa-r/icon12.gif)|LG_08\nLG_09|
+|Cesar (Viapando)|13|![](%sa-r/icon13.gif)|LG_10|
+|Cluckin' Bell (Chicken)|14|![](%sa-r/icon14.gif)|LG_11|
+|CJ (Carl Johnson)|15|![](%sa-r/icon15.gif)|LG_12|
+|Crash|16|![](%sa-r/icon16.gif)|LG_13\nLG_14|
+|Diner|17|![](%sa-r/icon17.gif)|LG_67|
 |Emmet|18|![](%sa-r/icon18.gif)|LG_15|
-|Enemy attack|19|![](%sa-r/icon19.gif)|LG_16|
+|Enemy Attack|19|![](%sa-r/icon19.gif)|LG_16|
 |Fire|20|![](%sa-r/icon20.gif)|LG_17|
-|Girl Friend|21|![](%sa-r/icon21.gif)|LG_18|
+|Girlfriend|21|![](%sa-r/icon21.gif)|LG_18|
 |Hospital|22|![](%sa-r/icon22.gif)|LG_19|
-|Loco Syndicate|23|![](%sa-r/icon23.gif)|LG_20|
+|Loco (Syndicate)|23|![](%sa-r/icon23.gif)|LG_20|
 |Maddog|24|![](%sa-r/icon24.gif)|LG_21|
 |Mafia|25|![](%sa-r/icon25.gif)|LG_22|
 |MC Strap|26|![](%sa-r/icon26.gif)|LG_23|
-|Tuning Shop|27|![](%sa-r/icon27.gif)|LG_24|
+|Mod Garage (Tuning Shop)|27|![](%sa-r/icon27.gif)|LG_24|
 |OG Loc|28|![](%sa-r/icon28.gif)|LG_25|
-|Pizza|29|![](%sa-r/icon29.gif)|LG_26|
+|Well Stacked Pizza Co|29|![](%sa-r/icon29.gif)|LG_26|
 |Police|30|![](%sa-r/icon30.gif)|LG_27|
-|Asset green|31|![](%sa-r/icon31.gif)|LG_28|
-|Asset red|32|![](%sa-r/icon32.gif)|LG_29|
+|Property for sale (Asset green)|31|![](%sa-r/icon31.gif)|LG_28|
+|Property not for sale (Asset red)|32|![](%sa-r/icon32.gif)|LG_29|
 |Race|33|![](%sa-r/icon33.gif)|LG_30|
 |Ryder|34|![](%sa-r/icon34.gif)|LG_31|
-|Savepoint|35|![](%sa-r/icon35.gif)|LG_32|
+|Safe House (Savepoint)|35|![](%sa-r/icon35.gif)|LG_32|
 |School|36|![](%sa-r/icon36.gif)|LG_33|
-|Unknown|37|![](%sa-r/icon37.gif)|LG_63|
+|Player interest\nMystery (Unknown)|37|![](%sa-r/icon37.gif)|LG_56\nLG_63|
 |Sweet|38|![](%sa-r/icon38.gif)|LG_35|
 |Tattoo|39|![](%sa-r/icon39.gif)|LG_36|
 |The Truth|40|![](%sa-r/icon40.gif)|LG_37|
-|Player target|41|![](%sa-r/icon41.gif)|LG_38|
-|Toreno Ranch|42|![](%sa-r/icon42.gif)|LG_39|
+|Player target|41|![](%sa-r/icon41.gif)|LG_64|
+|Toreno\nToreno Ranch|42|![](%sa-r/icon42.gif)|LG_38\nLG_39|
 |Triads|43|![](%sa-r/icon43.gif)|LG_40|
 |Triads Casino|44|![](%sa-r/icon44.gif)|LG_41|
-|Clothes|45|![](%sa-r/icon45.gif)|LG_42|
+|Clothes Shop|45|![](%sa-r/icon45.gif)|LG_42|
 |Woozie|46|![](%sa-r/icon46.gif)|LG_43|
 |Zero|47|![](%sa-r/icon47.gif)|LG_44|
-|Disco|48|![](%sa-r/icon48.gif)|LG_45|
-|Bar|49|![](%sa-r/icon49.gif)|LG_46|
+|Disco Date|48|![](%sa-r/icon48.gif)|LG_45|
+|Drinking Date (Bar)|49|![](%sa-r/icon49.gif)|LG_46|
 |Restaurant|50|![](%sa-r/icon50.gif)|LG_47|
-|Truck|51|![](%sa-r/icon51.gif)|LG_48|
+|Trucking|51|![](%sa-r/icon51.gif)|LG_48|
 |Robbery|52|![](%sa-r/icon52.gif)|LG_51|
-|Race|53|![](%sa-r/icon53.gif)|LG_52|
+|Race Tournament|53|![](%sa-r/icon53.gif)|LG_52|
 |Gym|54|![](%sa-r/icon54.gif)|LG_53|
-|Car|55|![](%sa-r/icon55.gif)|LG_57|
-|Light|56|![](%sa-r/icon56.gif)|\s|
+|Car impound|55|![](%sa-r/icon55.gif)|LG_57|
+|Yellow dot (Light)|56|![](%sa-r/icon56.gif)|\s|
 |Nearest air strip|57|![](%sa-r/icon57.gif)|LG_65|
-|Varrios Los Aztecas Gang|58|![](%sa-r/icon58.gif)|LG_58|
-|Ballas Gang|59|![](%sa-r/icon59.gif)|LG_59|
-|Los Santos Vagos Gang|60|![](%sa-r/icon60.gif)|LG_60|
-|San Fierro Rifa Gang|61|![](%sa-r/icon61.gif)|LG_61|
-|Grove Gang|62|![](%sa-r/icon62.gif)|LG_62|
-|Pay'n Spray|63|![](%sa-r/icon63.gif)|LG_34|
+|Varrios Los Aztecas (Gang)|58|![](%sa-r/icon58.gif)|LG_58|
+|Ballas (Gang)|59|![](%sa-r/icon59.gif)|LG_59|
+|Los Santos Vagos (Gang)|60|![](%sa-r/icon60.gif)|LG_60|
+|San Fierro Rifa (Gang)|61|![](%sa-r/icon61.gif)|LG_61|
+|Families (Grove Gang)|62|![](%sa-r/icon62.gif)|LG_62|
+|Pay 'n' Spray|63|![](%sa-r/icon63.gif)|LG_34|
 
 <script src="../../../js/main.min.js"></script>
