--- a/es/glossary.html
+++ b/es/glossary.html
@@ -11,28 +11,33 @@
 
 |Palabra|Referencia|
 |-|
-|`Int / Interger / Double` |Un número entero, o literal del mismo|
-|`Float / Point Floating`|Un número decimal, o literal del mismo|
-|`String / Long / Short`|Un carácter ascci, o literal del mismo|
-|`Array / Matrix / Vector / Quat`|Una coleccion de datos|
+|`Int / Interger / Double` |Un número entero o literal del mismo|
+|`Float / Point Floating`|Un número decimal o literal del mismo|
+|`Char / String / Long / Short`|Un carácter ascci o literal del mismo|
+|`Array`|Una coleccion de datos|
+|`Vector`|Un array de una dimención|
+|`Matrix`|Un array de dos dimenciones|
+|`Quat / Quaternion`|La rotación de un objeto en tres dimenciones|
 |`Bool / Boolean`|Un número booleano|
-|`True / Enable / On`|El 1 de algun booleano|
-|`False / Disable / Off`|El 0 de algun booleano|
+|`True`|El 1 de algun booleano|
+|`False`|El 0 de algun booleano|
 |`FAQ`|Preguntas frecuentes|
 |`ID`|Un identificador númerico ó textual|
 |`GXT`|El ID de un texto|
 |`OP`|El ID de un opcode|
-|`DMA`|El ID de un directirio|
+|`DMA`|El ID de un directorio|
 |`Model`|El ID de un modelo|
 |`Var`|Una variable de valor dinámico|
 |`Const`|Una variable de valor estático|
 |`Timer`|Una variable de valor cronologico|
 |`Label`|Una etiqueta de salto en el código|
 |`Handle`|Una variable con el control de algo|
-|`Coord.`|La coordenada de algo sobre un eje|
+|`Coord`|La coordenada de algo sobre un eje|
+|`Path`|La ruta u hubicación de algo|
 |`Coding`|Codificación, de cualquier código|
 |`Check`|Comprobación / verificación| 
 |`Byte`|_Proximamente..._|
+|`Word`|_Proximamente..._|
 |`Dword`|_Proximamente..._|
 
 <style>
