add custom titles, tables and more optimization.

--- a/test/markdown/html.html
+++ b/test/markdown/html.html
@@ -70,7 +70,7 @@ Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
 Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
 
 {% hint style="warning" %}
-:warning: Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
+[h5][:warning: Warning:]\nipsum dolor sit, amet consectetur adipisicing elit
 
 > jolas ko sit 
 
@@ -111,11 +111,11 @@ Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
 
 ---
 
-# h1 title example
+# h1 title example {custom class#custom_id}   
 Lorem, ipsum dolor sit
-## h2 title example
+## h2 title example {custom class}
 Lorem, ipsum dolor sit
-### h3 title example
+### h3 title example {#custom_id}
 Lorem, ipsum dolor sit
 #### h4 title example
 Lorem, ipsum dolor sit
