--- a/test/markdown/html.html
+++ b/test/markdown/html.html
@@ -25,7 +25,7 @@ Markdown - **By MatiDragon**
 |text |text|text  |
 
 :::center p-2
-[Enter to Google](https://google.com "at new window") \| [Relogin `.MD`](html.md "MD transformed at HTML") \| [Run JavaScript](#! "no is fake" 'bg-yellow black py-1 px-2 bold#run_js' `$('#show').toggle()`)
+[Enter to Google](https://google.com "at new window") | [Relogin `.MD`](html.md "MD transformed at HTML") | [Run JavaScript](#! "no is fake" 'bg-yellow black py-1 px-2 bold#run_js' `$('#show').toggle()`)
 :::
 
 :::l#show display:none;
