--- a/en/scm-documentation/sa/clothes.html
+++ b/en/scm-documentation/sa/clothes.html
@@ -14,300 +14,300 @@ Player.SetClothes($PLAYER_CHAR, <,texture>, <,model>, <,body part>)
 
 ## Torso
 
-|Texture|Model|[Body part](player-body-parts.html)|Description|
+|Description|Texture|Model|[Body part](player-body-parts.html)|
 |-|
-|player_torso|torso|0|Torso (default)|
-|vestblack|vest|0|Black Tank|
-|vest|vest|0|White Tank|
-|tshirt2horiz|tshirt2|0|Striped T-Shirt|
-|tshirtwhite|tshirt|0|White T-Shirt|
-|tshirtilovels|tshirt|0|L.S. T-Shirt|
-|tshirtblunts|tshirt|0|Sharps T-Shirt|
-|shirtbplaid|shirtb|0|Plaid Shirt|
-|shirtbcheck|shirtb|0|Checkered Shirt|
-|field|field|0|Combat Jacket|
-|tshirterisyell|tshirt|0|Eris T-Shirt|
-|tshirterisorn|tshirt|0|Eris T-Shirt2|
-|trackytop2eris|trackytop1|0|Track Top|
-|bbjackrim|bbjack|0|Rimmers Jacket|
-|bballjackrstar|bbjack|0|R-Star Jacket|
-|baskballdrib|baskball|0|Dribblers Vest|
-|baskballrim|baskball|0|Saint's Shirt|
-|sixtyniners|tshirt|0|69ers T-Shirt|
-|bandits|baseball|0|Bandits Top|
-|tshirtprored|tshirt|0|ProLaps T-Shirt|
-|tshirtproblk|tshirt|0|ProLaps Black T|
-|trackytop1pro|trackytop1|0|Track Top|
-|hockeytop|sweat|0|Slappers Top|
-|bbjersey|sleevt|0|Baseball T|
-|shellsuit|trackytop1|0|Leisure Top|
-|tshirtheatwht|tshirt|0|White Heat T|
-|tshirtbobomonk|tshirt|0|Bobo Ape T|
-|tshirtbobored|tshirt|0|Red Bobo T|
-|tshirtbase5|tshirt|0|Base 5 T|
-|tshirtsuburb|tshirt|0|Suburban T|
-|hoodyamerc|hoodya|0|Mercury Hood|
-|hoodyabase5|hoodya|0|Base 5 Hood|
-|hoodyarockstar|hoodya|0|Rockstar Hood|
-|wcoatblue|wcoat|0|Vest & T-Shirt|
-|coach|coach|0|Grn Windbreaker|
-|coachsemi|coach|0|Blk Windbreaker|
-|sweatrstar|sweat|0|Rockstar Sweat|
-|hoodyAblue|hoodyA|0|Blue Hoody|
-|hoodyAblack|hoodyA|0|Black Hoody|
-|hoodyAgreen|hoodyA|0|Green Hoody|
-|sleevtbrown|sleevt|0|Brown Shirt|
-|shirtablue|shirta|0|Sky Blue Shirt|
-|shirtayellow|shirta|0|Yellow Shirt|
-|shirtagrey|shirta|0|Gray Shirt|
-|shirtbgang|shirtb|0|Green Shirt|
-|tshirtzipcrm|tshirt|0|Cream Logo T|
-|tshirtzipgry|tshirt|0|Gray Logo T|
-|denimfade|denim|0|Jean Jacket|
-|bowling|hawaii|0|Bowling shirt|
-|hoodjackbeige|hoodjack|0|Hooded Jacket|
-|baskballloc|baskball|0|Loc-Down Vest|
-|tshirtlocgrey|tshirt|0|Loc-Down T|
-|tshirtmaddgrey|tshirt|0|Madd Tagg T|
-|tshirtmaddgrn|tshirt|0|Green Tagg T|
-|suit1grey|suit1|0|Gray Jacket|
-|suit1blk|suit1|0|Black Jacket|
-|leather|leather|0|Biker Jacket|
-|painter|painter|0|Chore Coat|
-|hawaiiwht|hawaii|0|Hawaiian Shirt|
-|hawaiired|hawaii|0|Blue Hawaiian|
-|sportjack|trackytop1|0|Sports Jacket|
-|suit1red|suit1|0|Red Jacket|
-|suit1blue|suit1|0|Blue Jacket|
-|suit1yellow|suit1|0|Yellow Jacket|
-|suit2grn|suit2|0|Tweed Jacket|
-|tuxedo|suit2|0|Tuxedo Pants|
-|suit1gang|suit1|0|Green Jacket|
-|letter|sleevt|0|Letterman Top|
+|Torso (default)|player_torso|torso|0|
+|Black Tank|vestblack|vest|0|
+|White Tank|vest|vest|0|
+|Striped T-Shirt|tshirt2horiz|tshirt2|0|
+|White T-Shirt|tshirtwhite|tshirt|0|
+|L.S. T-Shirt|tshirtilovels|tshirt|0|
+|Sharps T-Shirt|tshirtblunts|tshirt|0|
+|Plaid Shirt|shirtbplaid|shirtb|0|
+|Checkered Shirt|shirtbcheck|shirtb|0|
+|Combat Jacket|field|field|0|
+|Eris T-Shirt|tshirterisyell|tshirt|0|
+|Eris T-Shirt2|tshirterisorn|tshirt|0|
+|Track Top|trackytop2eris|trackytop1|0|
+|Rimmers Jacket|bbjackrim|bbjack|0|
+|R-Star Jacket|bballjackrstar|bbjack|0|
+|Dribblers Vest|baskballdrib|baskball|0|
+|Saint's Shirt|baskballrim|baskball|0|
+|69ers T-Shirt|sixtyniners|tshirt|0|
+|Bandits Top|bandits|baseball|0|
+|ProLaps T-Shirt|tshirtprored|tshirt|0|
+|ProLaps Black T|tshirtproblk|tshirt|0|
+|Track Top|trackytop1pro|trackytop1|0|
+|Slappers Top|hockeytop|sweat|0|
+|Baseball T|bbjersey|sleevt|0|
+|Leisure Top|shellsuit|trackytop1|0|
+|White Heat T|tshirtheatwht|tshirt|0|
+|Bobo Ape T|tshirtbobomonk|tshirt|0|
+|Red Bobo T|tshirtbobored|tshirt|0|
+|Base 5 T|tshirtbase5|tshirt|0|
+|Suburban T|tshirtsuburb|tshirt|0|
+|Mercury Hood|hoodyamerc|hoodya|0|
+|Base 5 Hood|hoodyabase5|hoodya|0|
+|Rockstar Hood|hoodyarockstar|hoodya|0|
+|Vest & T-Shirt|wcoatblue|wcoat|0|
+|Grn Windbreaker|coach|coach|0|
+|Blk Windbreaker|coachsemi|coach|0|
+|Rockstar Sweat|sweatrstar|sweat|0|
+|Blue Hoody|hoodyAblue|hoodyA|0|
+|Black Hoody|hoodyAblack|hoodyA|0|
+|Green Hoody|hoodyAgreen|hoodyA|0|
+|Brown Shirt|sleevtbrown|sleevt|0|
+|Sky Blue Shirt|shirtablue|shirta|0|
+|Yellow Shirt|shirtayellow|shirta|0|
+|Gray Shirt|shirtagrey|shirta|0|
+|Green Shirt|shirtbgang|shirtb|0|
+|Cream Logo T|tshirtzipcrm|tshirt|0|
+|Gray Logo T|tshirtzipgry|tshirt|0|
+|Jean Jacket|denimfade|denim|0|
+|Bowling shirt|bowling|hawaii|0|
+|Hooded Jacket|hoodjackbeige|hoodjack|0|
+|Loc-Down Vest|baskballloc|baskball|0|
+|Loc-Down T|tshirtlocgrey|tshirt|0|
+|Madd Tagg T|tshirtmaddgrey|tshirt|0|
+|Green Tagg T|tshirtmaddgrn|tshirt|0|
+|Gray Jacket|suit1grey|suit1|0|
+|Black Jacket|suit1blk|suit1|0|
+|Biker Jacket|leather|leather|0|
+|Chore Coat|painter|painter|0|
+|Hawaiian Shirt|hawaiiwht|hawaii|0|
+|Blue Hawaiian|hawaiired|hawaii|0|
+|Sports Jacket|sportjack|trackytop1|0|
+|Red Jacket|suit1red|suit1|0|
+|Blue Jacket|suit1blue|suit1|0|
+|Yellow Jacket|suit1yellow|suit1|0|
+|Tweed Jacket|suit2grn|suit2|0|
+|Tuxedo Pants|tuxedo|suit2|0|
+|Green Jacket|suit1gang|suit1|0|
+|Letterman Top|letter|sleevt|0|
 
 ## Legs
 
-|Texture|Model|Body part|Description|
+|Description|Texture|Model|Body part|
 |-|
-|player_legs|legs|2|Legs (default)|
-|worktrcamogrn|worktr|2|Woodland Camo|
-|worktrcamogry|worktr|2|Urban Camo|
-|worktrgrey|worktr|2|Gray Pants|
-|worktrkhaki|worktr|2|Olive Pants|
-|tracktr|tracktr|2|Sweat Pants|
-|tracktreris|tracktr|2|Track Pants|
-|jeansdenim|jeans|2|Blue Jeans|
-|legsblack|legs|2|Black Boxers|
-|legsheart|legs|2|Heart Boxers|
-|biegetr|chinosb|2|Beige Pants|
-|tracktrpro|tracktr|2|Track Pants|
-|tracktrwhstr|tracktr|2|Black Track Pants|
-|racktrblue|tracktr|2|Blue Track Pants|
-|tracktrgang|tracktr|2|Green Track Pants|
-|bbshortwht|boxingshort|2|Ball Shorts|
-|boxshort|boxingshort|2|Boxing Shorts|
-|bbshortred|boxingshort|2|Dribbler Shorts|
-|shellsuittr|tracktr|2|Leisure Pants|
-|shortsgrey|shorts|2|Gray Shorts|
-|shortskhaki|shorts|2|Olive Shorts|
-|chongergrey|chonger|2|Gray Chonglers|
-|chongergang|chonger|2|Green Chonglers|
-|chongerred|chonger|2|Red Chonglers|
-|chongerblue|chonger|2|Blue Chonglers|
-|shortsgang|shorts|2|Green Shorts|
-|denimsgang|jeans|2|Green Jeans|
-|denimsred|jeans|2|Red Jeans|
-|chinosbiege|chinosb|2|Beige Khakis|
-|chinoskhaki|chinosb|2|Olive Khakis|
-|cutoffchinos|shorts|2|Beige Shorts|
-|cutoffchinosblue|shorts|2|Blue Shorts|
-|chinosblack|chinosb|2|Black Khakis|
-|chinosblue|chinosb|2|Blue Khakis|
-|leathertr|leathertr|2|Leather Pants|
-|leathertrchaps|leathertr|2|Leather Chaps|
-|suit1trgrey|suit1tr|2|Gray Pants|
-|suit1trblk|suit1tr|2|Black Pants|
-|cutoffdenims|shorts|2|Jean Shorts|
-|suit1trred|suit1tr|2|Red Pants|
-|suit1trblue|suit1tr|2|Blue Pants|
-|suit1tryellow|suit1tr|2|Yellow Pants|
-|suit1trgreen|suit1tr|2|Tweed Pants|
-|suit1trblk2|suit1tr|2|Tuxedo Pants|
-|suit1trgang|suit1tr|2|Green Pants|
+|Legs (default)|player_legs|legs|2|
+|Woodland Camo|worktrcamogrn|worktr|2|
+|Urban Camo|worktrcamogry|worktr|2|
+|Gray Pants|worktrgrey|worktr|2|
+|Olive Pants|worktrkhaki|worktr|2|
+|Sweat Pants|tracktr|tracktr|2|
+|Track Pants|tracktreris|tracktr|2|
+|Blue Jeans|jeansdenim|jeans|2|
+|Black Boxers|legsblack|legs|2|
+|Heart Boxers|legsheart|legs|2|
+|Beige Pants|biegetr|chinosb|2|
+|Track Pants|tracktrpro|tracktr|2|
+|Black Track Pants|tracktrwhstr|tracktr|2|
+|Blue Track Pants|racktrblue|tracktr|2|
+|Green Track Pants|tracktrgang|tracktr|2|
+|Ball Shorts|bbshortwht|boxingshort|2|
+|Boxing Shorts|boxshort|boxingshort|2|
+|Dribbler Shorts|bbshortred|boxingshort|2|
+|Leisure Pants|shellsuittr|tracktr|2|
+|Gray Shorts|shortsgrey|shorts|2|
+|Olive Shorts|shortskhaki|shorts|2|
+|Gray Chonglers|chongergrey|chonger|2|
+|Green Chonglers|chongergang|chonger|2|
+|Red Chonglers|chongerred|chonger|2|
+|Blue Chonglers|chongerblue|chonger|2|
+|Green Shorts|shortsgang|shorts|2|
+|Green Jeans|denimsgang|jeans|2|
+|Red Jeans|denimsred|jeans|2|
+|Beige Khakis|chinosbiege|chinosb|2|
+|Olive Khakis|chinoskhaki|chinosb|2|
+|Beige Shorts|cutoffchinos|shorts|2|
+|Blue Shorts|cutoffchinosblue|shorts|2|
+|Black Khakis|chinosblack|chinosb|2|
+|Blue Khakis|chinosblue|chinosb|2|
+|Leather Pants|leathertr|leathertr|2|
+|Leather Chaps|leathertrchaps|leathertr|2|
+|Gray Pants|suit1trgrey|suit1tr|2|
+|Black Pants|suit1trblk|suit1tr|2|
+|Jean Shorts|cutoffdenims|shorts|2|
+|Red Pants|suit1trred|suit1tr|2|
+|Blue Pants|suit1trblue|suit1tr|2|
+|Yellow Pants|suit1tryellow|suit1tr|2|
+|Tweed Pants|suit1trgreen|suit1tr|2|
+|Tuxedo Pants|suit1trblk2|suit1tr|2|
+|Green Pants|suit1trgang|suit1tr|2|
 
 ## Shoes
 
-|Texture|Model|Body part|Description|
+|Description|Texture|Model|Body part|
 |-|
-|foot|feet|3|Shoes ; (default)|
-|cowboyboot2|biker|3|Cowboy Boots|
-|bask2semi|bask1|3|Hi-Top Kicks|
-|bask1eris|bask1|3|Hi-Top Sneaks|
-|sneakerbincgang|sneaker|3|Green Low-Tops|
-|sneakerbincblu|sneaker|3|Blue Low-Tops|
-|sneakerbincblk|sneaker|3|Black Low-Tops|
-|sandal|flipflop|3|Sandals|
-|sandalsock|flipflop|3|Sandal & Socks|
-|flipflop|flipflop|3|Flip-Flops|
-|hitop|bask1|3|Mid-Top Sneaker|
-|convproblk|conv|3|Black Hi-Tops|
-|convproblu|conv|3|Blue Hi-Tops|
-|convprogrn|conv|3|Green Hi-Tops|
-|sneakerprored|sneaker|3|Red Sneakers|
-|sneakerproblu|sneaker|3|Blue Sneakers|
-|sneakerprowht|sneaker|3|White Sneakers|
-|bask1prowht|bask1|3|White Mid-Tops|
-|bask1problk|bask1|3|Black Mid-Tops|
-|boxingshoe|biker|3|Boxing Shoes|
-|convheatblk|conv|3|Black Hi-Tops|
-|convheatred|conv|3|Red Hi-Tops|
-|convheatorn|conv|3|Orange Hi-Tops|
-|sneakerheatwht|sneaker|3|White Low-Tops|
-|sneakerheatgry|sneaker|3|Gray Low-Tops|
-|sneakerheatblk|sneaker|3|Black Low-Tops|
-|bask2heatwht|bask1|3|White Hi-Tops|
-|bask2heatband|bask1|3|Strap Sneakers|
-|timbergrey|bask1|3|Gray Boots|
-|timberred|bask1|3|Red Boots|
-|timberfawn|bask1|3|Brown Boots|
-|timberhike|bask1|3|Hiking Boots|
-|cowboyboot|biker|3|Cowboy Boots|
-|biker|biker|3|Biker Boots|
-|snakeskin|biker|3|Snake Skin|
-|shoedressblk|shoe|3|Black Shoes|
-|shoedressbrn|shoe|3|Brown Shoes|
-|shoespatz|shoe|3|Spats|
+|Shoes ; (default)|foot|feet|3|
+|Cowboy Boots|cowboyboot2|biker|3|
+|Hi-Top Kicks|bask2semi|bask1|3|
+|Hi-Top Sneaks|bask1eris|bask1|3|
+|Green Low-Tops|sneakerbincgang|sneaker|3|
+|Blue Low-Tops|sneakerbincblu|sneaker|3|
+|Black Low-Tops|sneakerbincblk|sneaker|3|
+|Sandals|sandal|flipflop|3|
+|Sandal & Socks|sandalsock|flipflop|3|
+|Flip-Flops|flipflop|flipflop|3|
+|Mid-Top Sneaker|hitop|bask1|3|
+|Black Hi-Tops|convproblk|conv|3|
+|Blue Hi-Tops|convproblu|conv|3|
+|Green Hi-Tops|convprogrn|conv|3|
+|Red Sneakers|sneakerprored|sneaker|3|
+|Blue Sneakers|sneakerproblu|sneaker|3|
+|White Sneakers|sneakerprowht|sneaker|3|
+|White Mid-Tops|bask1prowht|bask1|3|
+|Black Mid-Tops|bask1problk|bask1|3|
+|Boxing Shoes|boxingshoe|biker|3|
+|Black Hi-Tops|convheatblk|conv|3|
+|Red Hi-Tops|convheatred|conv|3|
+|Orange Hi-Tops|convheatorn|conv|3|
+|White Low-Tops|sneakerheatwht|sneaker|3|
+|Gray Low-Tops|sneakerheatgry|sneaker|3|
+|Black Low-Tops|sneakerheatblk|sneaker|3|
+|White Hi-Tops|bask2heatwht|bask1|3|
+|Strap Sneakers|bask2heatband|bask1|3|
+|Gray Boots|timbergrey|bask1|3|
+|Red Boots|timberred|bask1|3|
+|Brown Boots|timberfawn|bask1|3|
+|Hiking Boots|timberhike|bask1|3|
+|Cowboy Boots|cowboyboot|biker|3|
+|Biker Boots|biker|biker|3|
+|Snake Skin|snakeskin|biker|3|
+|Black Shoes|shoedressblk|shoe|3|
+|Brown Shoes|shoedressbrn|shoe|3|
+|Spats|shoespatz|shoe|3|
 
 ## Necklaces
 
-|Texture|Model|Body part|Description|
+|Description|Texture|Model|Body part|
 |-|
-|dogtag|neck|13|Dogtags|
-|neckafrica|neck|13|Africa Pendant|
-|stopwatch|neck|13|Stop Watch|
-|necksaints|neck|13|Saints Chain|
-|neckhash|neck|13|Leaf Chain|
-|necksilver|neck2|13|Silver Cuban|
-|neckgold|neck2|13|Gold Cuban|
-|neckropes|neck2|13|Silver Chain|
-|neckropeg|neck2|13|Gold Chain|
-|neckls|neck|13|L.S. Chain|
-|neckdollar|neck|13|Dollar Chain|
-|neckcross|neck|13|Cross Chain|
+|Dogtags|dogtag|neck|13|
+|Africa Pendant|neckafrica|neck|13|
+|Stop Watch|stopwatch|neck|13|
+|Saints Chain|necksaints|neck|13|
+|Leaf Chain|neckhash|neck|13|
+|Silver Cuban|necksilver|neck2|13|
+|Gold Cuban|neckgold|neck2|13|
+|Silver Chain|neckropes|neck2|13|
+|Gold Chain|neckropeg|neck2|13|
+|L.S. Chain|neckls|neck|13|
+|Dollar Chain|neckdollar|neck|13|
+|Cross Chain|neckcross|neck|13|
 
 ## Watches
 
-|Texture|Model|Body part|Description|
+|Description|Texture|Model|Body part|
 |-|
-|watchpink|watch|14|Pink Watch|
-|watchyellow|watch|14|Yellow Watch|
-|watchpro|watch|14|Pro-Laps White|
-|watchpro2|watch|14|Pro-Laps Black|
-|watchsub1|watch|14|Face Watch|
-|watchsub2|watch|14|Face Black|
-|watchzip1|watch|14|Zip Blue|
-|watchzip2|watch|14|Zip Gold|
-|watchgno|watch|14|Gold Gnocchi|
-|watchgno2|watch|14|Silver Gnocchi|
-|watchcro|watch|14|Gold Crowex|
-|watchcro2|watch|14|Silver Crowex|
+|Pink Watch|watchpink|watch|14|
+|Yellow Watch|watchyellow|watch|14|
+|Pro-Laps White|watchpro|watch|14|
+|Pro-Laps Black|watchpro2|watch|14|
+|Face Watch|watchsub1|watch|14|
+|Face Black|watchsub2|watch|14|
+|Zip Blue|watchzip1|watch|14|
+|Zip Gold|watchzip2|watch|14|
+|Gold Gnocchi|watchgno|watch|14|
+|Silver Gnocchi|watchgno2|watch|14|
+|Gold Crowex|watchcro|watch|14|
+|Silver Crowex|watchcro2|watch|14|
 
 ## Glasses
 
-|Texture|Model|Body part|Description|
+|Description|Texture|Model|Body part|
 |-|
-|groucho|grouchos|15|Joke Glasses|
-|zorro|zorromask|15|Joke Mask|
-|eyepatch|eyepatch|15|Eyepatch|
-|glasses01|glasses01|15|Black Shades|
-|glasses04|glasses04|15|Brown Shades|
-|bandred3|bandmask|15|Red Rag|
-|bandblue3|bandmask|15|Blue Rag|
-|bandgang3|bandmask|15|Green Rag|
-|bandblack3|bandmask|15|Black Rag|
-|glasses01dark|glasses01|15|Aviators|
-|glasses04dark|glasses04|15|Sun Glasses|
-|glasses03|glasses03|15|Green Tint|
-|glasses03red|glasses03|15|Red Tint|
-|glasses03blue|glasses03|15|Blue Tint|
-|glasses03dark|glasses03|15|Black Shades|
-|glasses05dark|glasses03|15|Black Shades|
-|glasses05|glasses03|15|Black Rim|
+|Joke Glasses|groucho|grouchos|15|
+|Joke Mask|zorro|zorromask|15|
+|Eyepatch|eyepatch|eyepatch|15|
+|Black Shades|glasses01|glasses01|15|
+|Brown Shades|glasses04|glasses04|15|
+|Red Rag|bandred3|bandmask|15|
+|Blue Rag|bandblue3|bandmask|15|
+|Green Rag|bandgang3|bandmask|15|
+|Black Rag|bandblack3|bandmask|15|
+|Aviators|glasses01dark|glasses01|15|
+|Sun Glasses|glasses04dark|glasses04|15|
+|Green Tint|glasses03|glasses03|15|
+|Red Tint|glasses03red|glasses03|15|
+|Blue Tint|glasses03blue|glasses03|15|
+|Black Shades|glasses03dark|glasses03|15|
+|Black Shades|glasses05dark|glasses03|15|
+|Black Rim|glasses05|glasses03|15|
 
 ## Hats
 
-|Texture|Model|Body part|Description|
+|Description|Texture|Model|Body part|
 |-|
-|bandred|bandana|16|Red Rag Back|
-|bandblue|bandana|16|Blue Rag Back|
-|bandgang|bandana|16|Green Rag Back|
-|bandblack|bandana|16|Black Rag Back|
-|bandred2|bandknots|16|Red Rag Front|
-|bandblue2|bandknots|16|Blue Rag Front|
-|bandblack2|bandknots|16|Black Rag Front|
-|bandgang2|bandknots|16|Green Rag Front|
-|capknitgrn|capknit|16|Watch Cap|
-|captruck|captruck|16|Trucker Hat|
-|cowboy|cowboy|16|Cowboy Hat|
-|hattiger|cowboy|16|Leopard Cowboy|
-|helmet|helmet|16|Fullface Helmet|
-|moto|moto|16|MotoX Helmet|
-|boxingcap|boxingcap|16|Boxing Helmet|
-|hockey|hockeymask|16|Hockey Mask|
-|capgang|cap|16|Green Cap|
-|capgangback|capback|16|Green Cap (Back)|
-|capgangside|capside|16|Green Cap (Side)|
-|capgangover|capovereye|16|Grn Cap (Tilt)|
-|capgangup|caprimup|16|Grn Cap (Up)|
-|bikerhelmet|bikerhelmet|16|Helmut|
-|capred|cap|16|Red Cap|
-|capredback|capback|16|Red Cap (Back)|
-|capredside|capside|16|Red Cap (Side)|
-|capredover|capovereye|16|Red Cap (Tilt)|
-|capredup|caprimup|16|Red Cap (Up)|
-|capblue|cap|16|Blue Cap|
-|capblueback|capback|16|Blue Cap (Back)|
-|capblueside|capside|16|Blue Cap (Side)|
-|capblueover|capovereye|16|Blue Cap (Tilt)|
-|capblueup|caprimup|16|Blue Cap (Up)|
-|skullyblk|skullycap|16|Black Skully|
-|skullygrn|skullycap|16|Green Skully|
-|hatmancblk|hatmanc|16|Black Sun Hat|
-|hatmancplaid|hatmanc|16|Plaid Sun Hat|
-|capzip|cap|16|Cap|
-|capzipback|capback|16|Cap (Back)|
-|capzipside|capside|16|Cap (Side)|
-|capzipover|capovereye|16|Cap Tilted|
-|capzipup|caprimup|16|Cap Rim Up|
-|beretred|beret|16|Red Beret|
-|beretblk|beret|16|Black Beret|
-|capblk|cap|16|Black Cap|
-|capblkback|capback|16|Black Cap (Back)|
-|capblkside|capside|16|Black Cap (Side)|
-|capblkover|capovereye|16|Black Cap (Tilt)|
-|capblkup|caprimup|16|Black Cap (Up)|
-|trilbydrk|trilby|16|Dark Trilby|
-|trilbylght|trilby|16|Light Trilby|
-|bowler|bowler|16|Black Derby|
-|bowlerred|bowler|16|Red Derby|
-|bowlerblue|bowler|16|Blue Derby|
-|bowleryellow|bowler|16|Yellow Derby|
-|boater|boater|16|Gray Boater|
-|bowlergang|bowler|16|Green Derby|
-|boaterblk|boater|16|Black Boater|
+|Red Rag Back|bandred|bandana|16|
+|Blue Rag Back|bandblue|bandana|16|
+|Green Rag Back|bandgang|bandana|16|
+|Black Rag Back|bandblack|bandana|16|
+|Red Rag Front|bandred2|bandknots|16|
+|Blue Rag Front|bandblue2|bandknots|16|
+|Black Rag Front|bandblack2|bandknots|16|
+|Green Rag Front|bandgang2|bandknots|16|
+|Watch Cap|capknitgrn|capknit|16|
+|Trucker Hat|captruck|captruck|16|
+|Cowboy Hat|cowboy|cowboy|16|
+|Leopard Cowboy|hattiger|cowboy|16|
+|Fullface Helmet|helmet|helmet|16|
+|MotoX Helmet|moto|moto|16|
+|Boxing Helmet|boxingcap|boxingcap|16|
+|Hockey Mask|hockey|hockeymask|16|
+|Green Cap|capgang|cap|16|
+|Green Cap (Back)|capgangback|capback|16|
+|Green Cap (Side)|capgangside|capside|16|
+|Grn Cap (Tilt)|capgangover|capovereye|16|
+|Grn Cap (Up)|capgangup|caprimup|16|
+|Helmut|bikerhelmet|bikerhelmet|16|
+|Red Cap|capred|cap|16|
+|Red Cap (Back)|capredback|capback|16|
+|Red Cap (Side)|capredside|capside|16|
+|Red Cap (Tilt)|capredover|capovereye|16|
+|Red Cap (Up)|capredup|caprimup|16|
+|Blue Cap|capblue|cap|16|
+|Blue Cap (Back)|capblueback|capback|16|
+|Blue Cap (Side)|capblueside|capside|16|
+|Blue Cap (Tilt)|capblueover|capovereye|16|
+|Blue Cap (Up)|capblueup|caprimup|16|
+|Black Skully|skullyblk|skullycap|16|
+|Green Skully|skullygrn|skullycap|16|
+|Black Sun Hat|hatmancblk|hatmanc|16|
+|Plaid Sun Hat|hatmancplaid|hatmanc|16|
+|Cap|capzip|cap|16|
+|Cap (Back)|capzipback|capback|16|
+|Cap (Side)|capzipside|capside|16|
+|Cap Tilted|capzipover|capovereye|16|
+|Cap Rim Up|capzipup|caprimup|16|
+|Red Beret|beretred|beret|16|
+|Black Beret|beretblk|beret|16|
+|Black Cap|capblk|cap|16|
+|Black Cap (Back)|capblkback|capback|16|
+|Black Cap (Side)|capblkside|capside|16|
+|Black Cap (Tilt)|capblkover|capovereye|16|
+|Black Cap (Up)|capblkup|caprimup|16|
+|Dark Trilby|trilbydrk|trilby|16|
+|Light Trilby|trilbylght|trilby|16|
+|Black Derby|bowler|bowler|16|
+|Red Derby|bowlerred|bowler|16|
+|Blue Derby|bowlerblue|bowler|16|
+|Yellow Derby|bowleryellow|bowler|16|
+|Gray Boater|boater|boater|16|
+|Green Derby|bowlergang|bowler|16|
+|Black Boater|boaterblk|boater|16|
 
 ## Special
 
-|Texture|Model|Body part|Description|
+|Description|Texture|Model|Body part|
 |-|
-|gimpleg|gimpleg|17|Gimp Suit|
-|valet|valet|17|Valet Uniform|
-|countrytr|countrytr|17|Rural Clothes|
-|croupier|valet|17|Croupier|
-|policetr|policetr|17|Cop|
-|balaclava|balaclava|17|Ski Mask|
-|pimptr|pimptr|17|Pimp Suit|
-|garageleg|garagetr|17|Racing Suit|
-|medictr|medictr|17|Medic Uniform|
+|Gimp Suit|gimpleg|gimpleg|17|
+|Valet Uniform|valet|valet|17|
+|Rural Clothes|countrytr|countrytr|17|
+|Croupier|croupier|valet|17|
+|Cop|policetr|policetr|17|
+|Ski Mask|balaclava|balaclava|17|
+|Pimp Suit|pimptr|pimptr|17|
+|Racing Suit|garageleg|garagetr|17|
+|Medic Uniform|medictr|medictr|17|
 
 <script src="../../../js/main.min.js"></script>
