--- a/es/scm-documentation/sa/gangs.html
+++ b/es/scm-documentation/sa/gangs.html
@@ -16,14 +16,14 @@
 |Nombre|ID|GXT|
 |-|
 |Ballas|0|ST_GNG0|
-|Grove Street Families|1|ST_GNG1|
-|Los Santos Vagos|2|ST_GNG2|
-|San Fierro Rifa|3|ST_GNG3|
+|Families de Grove Street|1|ST_GNG1|
+|Vagos de Los Santos|2|ST_GNG2|
+|Rifas de San Fierro|3|ST_GNG3|
 |Da Nang Boys|4|ST_GNG4|
 |Mafia|5|ST_GNG5|
-|Mountain Cloud Triad|6|ST_GNG6|
+|Tríada Mountain Cloud|6|ST_GNG6|
 |Varrio Los Aztecas|7|ST_GNG7|
-|(unused)|8|ST_GNG8|
-|(unused)|9|ST_GNG9|
+|Gang 9 (en desuso)|8|ST_GNG8|
+|Gang 10 (en desuso)|9|ST_GNG9|
 
 <script src="../../../js/main.min.js"></script>
