--- a/es/scm-documentation/sa/haircuts.html
+++ b/es/scm-documentation/sa/haircuts.html
@@ -12,40 +12,40 @@
 Player.SetClothes($PLAYER_CHAR, <,textura>, <,modelo>, <,parte del cuerpo>)
 ```
 
-|Textura|Modelo|[Parte del Cuerpo](player-body-parts.html)|Descripción|
+|Descripción|Textura|Modelo|[Parte del Cuerpo](player-body-parts.html)|
 |-|
-|afro|afro|1|Afro|
-|afrobeard|afro|1|Afro & Beard|
-|afroblond|afro|1|Blonde Afro|
-|afrogoatee|afro|1|Afro & Goatee|
-|afrotash|afro|1|Afro & Stash|
-|bald|head|1|Bald Head|
-|baldbeard|head|1|Bald & Beard|
-|baldgoatee|head|1|Bald & Goatee|
-|baldtash|head|1|Bald & Stash|
-|beard|head|1|Cesar & Beard|
-|cornrows|cornrows|1|Cornrow|
-|cornrowsb|cornrows|1|Blonde Cornrow|
-|elvishair|elvishair|1|Elvis Hair|
-|flattop|flattop|1|FlatTop|
-|goatee|head|1|Cesar & Goatee|
-|groovecut|groovecut|1|Groove Cut|
-|hairblond|head|1|Blonde Hair|
-|hairblue|head|1|Blue Hair|
-|hairgreen|head|1|Green Hair|
-|hairpink|head|1|Pink Hair|
-|hairred|Head|1|Red Hair|
-|highafro|highafro|1|High Afro|
-|highfade|head|1|High Fade|
-|jhericurl|jheri|1|Jheri Curl|
-|mohawk|mohawk|1|Mowhawk|
-|mohawkbeard|mohawk|1|Mohawk & Beard|
-|mohawkblond|mohawk|1|Blonde Mowhawk|
-|mohawkpink|mohawk|1|Pink Mowhawk|
-|player_face|head|1|Cesar|
-|slope|slope|1|Slope|
-|tash|head|1|Cesar & Stash|
-|tramline|tramline|1|Detail Cut|
-|wedge|wedge|1|Wedge|
+|Afro|afro|afro|1|
+|Afro & Beard|afrobeard|afro|1|
+|Blonde Afro|afroblond|afro|1|
+|Afro & Goatee|afrogoatee|afro|1|
+|Afro & Stash|afrotash|afro|1|
+|Bald Head|bald|head|1|
+|Bald & Beard|baldbeard|head|1|
+|Bald & Goatee|baldgoatee|head|1|
+|Bald & Stash|baldtash|head|1|
+|Cesar & Beard|beard|head|1|
+|Cornrow|cornrows|cornrows|1|
+|Blonde Cornrow|cornrowsb|cornrows|1|
+|Elvis Hair|elvishair|elvishair|1|
+|FlatTop|flattop|flattop|1|
+|Cesar & Goatee|goatee|head|1|
+|Groove Cut|groovecut|groovecut|1|
+|Blonde Hair|hairblond|head|1|
+|Blue Hair|hairblue|head|1|
+|Green Hair|hairgreen|head|1|
+|Pink Hair|hairpink|head|1|
+|Red Hair|hairred|Head|1|
+|High Afro|highafro|highafro|1|
+|High Fade|highfade|head|1|
+|Jheri Curl|jhericurl|jheri|1|
+|Mowhawk|mohawk|mohawk|1|
+|Mohawk & Beard|mohawkbeard|mohawk|1|
+|Blonde Mowhawk|mohawkblond|mohawk|1|
+|Pink Mowhawk|mohawkpink|mohawk|1|
+|Cesar|player_face|head|1|
+|Slope|slope|slope|1|
+|Cesar & Stash|tash|head|1|
+|Detail Cut|tramline|tramline|1|
+|Wedge|wedge|wedge|1|
 
 <script src="../../../js/main.min.js"></script>
