--- a/en/tools.html
+++ b/en/tools.html
@@ -27,8 +27,8 @@ JKSD
 
 :::row
 :::col-6
-:::my-3
-[copy to clipboard](#! 'bg-teal black py-2 px-3' `
+:::mx-3
+[copy to clipboard](#! 'bg-teal black p-2 py-3' `
   CopyTextContent($('#output'))
 `):::
 :::
