--- a/es/credits.html
+++ b/es/credits.html
@@ -17,7 +17,7 @@ Alexander Blade, Barton Waterduck, BG_ASM, Capushon, CyQ, Demarest, JernejL, Ham
 
 **Un agradecimiento especial a yelmi y Xieon por su apoyo.**
 
-## Translators
+## Traductores
 
 Y_Less, tomworld10, -Shadow-Link, Mordecki, Silent, WordsBG, FunGt, Wesser, Mobster, Jost_Vice, Thomazu, Balint, Ridvan and Tuna (RT), MatiDragon, Mega GTAшnik, SHooZ, Yi Yangyijk, VCT team, Alex5526, Marek Simsa, Syping/Hulkkiller, IMasterFX, MINE, wmysterio, forms55, XMDS.
 
