--- a/es/scm-documentation/sa/actors.html
+++ b/es/scm-documentation/sa/actors.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
+```sb3
+009A: 0@ = create_actor <,ID> 0 at 0 0 0
+```
+
 :::success
 Lista tomada de [SA-MP wiki](https://sampwiki.blast.hk)
 :::
@@ -15,29 +19,29 @@ Lista tomada de [SA-MP wiki](https://sampwiki.blast.hk)
 |Descripción|ID|Modelo|Locación|Sexo|
 |-|
 |Carl "CJ" Johnson (Actor Principal)|0|\-|Anywhere|Masculino|
-|Taxi Driver/Train Driver|7|male01|San Andreas|Masculino|
-|Normal Ped|9|bfori|San Andreas|Femenino|
-|Old Woman|10|bfost|San Andreas|Femenino|
+|Conductor de Taxi/Tren|7|male01|San Andreas|Masculino|
+|Ped Comun|9|bfori|San Andreas|Femenino|
+|Anciana|10|bfost|San Andreas|Femenino|
 |Casino croupier|11|vbfycrp|Las Venturas Casinos|Femenino|
 |Rich Woman|12|bfyri|San Andreas|Femenino|
 |Street Girl|13|bfyst|San Andreas|Femenino|
-|Normal Ped|14|bmori|San Andreas|Masculino|
+|Ped Comun|14|bmori|San Andreas|Masculino|
 |Mr.Whittaker (RS Haul Owner)|15|bmost|San Andreas|Masculino|
 |Airport Ground Worker|16|bmyap|Airports|Masculino|
 |Businessman|17|bmybu|San Andreas|Masculino|
 |Beach Visitor|18|bmybe|Beaches of SA|Masculino|
 |DJ|19|bmydj|San Andreas|Masculino|
 |Rich Guy (Madd Dogg's Manager)|20|bmyri|San Andreas|Masculino|
-|Normal Ped|21|bmycr|San Andreas|Masculino|
-|Normal Ped|22|bmyst|San Andreas|Masculino|
+|Ped Comun|21|bmycr|San Andreas|Masculino|
+|Ped Comun|22|bmyst|San Andreas|Masculino|
 |BMXer|23|wmybmx|Los Santos|Masculino|
 |Madd Dogg Bodyguard|24|wbdyg1|Madd Dogg's Mansion|Masculino|
 |Madd Dogg Bodyguard|25|wbdyg2|Madd Dogg's Mansion|Masculino|
 |Backpacker|26|wmybp|San Andreas|Masculino|
 |Construction Worker|27|wmycon|Doherty|Masculino|
-|Drug Dealer|28|bmydrug|Los Santos|Masculino|
-|Drug Dealer|29|wmydrug|San Fierro|Masculino|
-|Drug Dealer|30|hmydrug|Las Venturas|Masculino|
+|Narcotraficante|28|bmydrug|Los Santos|Masculino|
+|Narcotraficante|29|wmydrug|San Fierro|Masculino|
+|Narcotraficante|30|hmydrug|Las Venturas|Masculino|
 |Farm-Town inhabitant|31|dwfolc|San Andreas|Femenino|
 |Farm-Town inhabitant|32|dwmolc1|San Andreas|Masculino|
 |Farm-Town inhabitant|33|dwmolc2|San Andreas|Masculino|
@@ -45,68 +49,68 @@ Lista tomada de [SA-MP wiki](https://sampwiki.blast.hk)
 |Gardener|35|hmogar|San Andreas|Masculino|
 |Golfer|36|wmygol1|San Andreas|Masculino|
 |Golfer|37|wmygol2|San Andreas|Masculino|
-|Normal Ped|38|hfori|San Andreas|Femenino|
-|Normal Ped|39|hfost|San Andreas|Femenino|
-|Normal Ped|40|hfyri|San Andreas|Femenino|
-|Normal Ped|41|hfyst|San Andreas|Femenino|
+|Ped Comun|38|hfori|San Andreas|Femenino|
+|Ped Comun|39|hfost|San Andreas|Femenino|
+|Ped Comun|40|hfyri|San Andreas|Femenino|
+|Ped Comun|41|hfyst|San Andreas|Femenino|
 |Jethro|42|jethro|San Fierro|Masculino|
-|Normal Ped|43|hmori|San Andreas|Masculino|
-|Normal Ped|44|hmost|San Andreas|Masculino|
+|Ped Comun|43|hmori|San Andreas|Masculino|
+|Ped Comun|44|hmost|San Andreas|Masculino|
 |Beach Visitor|45|hmybe|Beaches of SA|Masculino|
-|Normal Ped|46|hmyri|San Andreas|Masculino|
-|Normal Ped|47|hmycr|San Andreas|Masculino|
-|Normal Ped|48|hmyst|San Andreas|Masculino|
+|Ped Comun|46|hmyri|San Andreas|Masculino|
+|Ped Comun|47|hmycr|San Andreas|Masculino|
+|Ped Comun|48|hmyst|San Andreas|Masculino|
 |Snakehead (Da Nang)|49|omokung|San Andreas|Masculino|
-|Mechanic|50|wmymech|San Andreas|Masculino|
+|Mecanico|50|wmymech|San Andreas|Masculino|
 |Mountain Biker|51|bmymoun|San Andreas|Masculino|
 |Mountain Biker|52|wmymoun|San Andreas|Masculino|
 |Unknown|53|ofori|San Andreas|Femenino|
-|Normal Ped|54|ofost|San Andreas|Femenino|
-|Normal Ped|55|ofyri|San Andreas|Femenino|
-|Normal Ped|56|ofyst|San Andreas|Femenino|
-|Oriental Ped|57|omori|San Andreas|Masculino|
-|Oriental Ped|58|omost|San Andreas|Masculino|
-|Normal Ped|59|omyri|San Andreas|Masculino|
-|Normal Ped|60|omyst|San Andreas|Masculino|
-|Pilot|61|wmyplt|San Andreas|Masculino|
+|Ped Comun|54|ofost|San Andreas|Femenino|
+|Ped Comun|55|ofyri|San Andreas|Femenino|
+|Ped Comun|56|ofyst|San Andreas|Femenino|
+|Ped Oriental|57|omori|San Andreas|Masculino|
+|Ped Oriental|58|omost|San Andreas|Masculino|
+|Ped Comun|59|omyri|San Andreas|Masculino|
+|Ped Comun|60|omyst|San Andreas|Masculino|
+|Piloto|61|wmyplt|San Andreas|Masculino|
 |Colonel Fuhrberger|62|wmopj|San Andreas|Masculino|
-|Prostitute|63|bfypro|San Andreas|Femenino|
-|Prostitute|64|hfypro|San Andreas|Femenino|
+|Prostituta|63|bfypro|San Andreas|Femenino|
+|Prostituta|64|hfypro|San Andreas|Femenino|
 |Kendl Johnson|65|kendl|Los Santos and San Fierro|Femenino|
-|Pool Player|66|bmypol1|Bars|Masculino|
-|Pool Player|67|bmypol2|Bars, Works at Dillimore Gas Station|Masculino|
+|Jugador de Pool|66|bmypol1|Bars|Masculino|
+|Jugador de Pool|67|bmypol2|Bars, Works at Dillimore Gas Station|Masculino|
 |Priest/Preacher|68|wmoprea|Las Venturas|Masculino|
-|Normal Ped|69|sbfyst|San Andreas|Femenino|
-|Scientist|70|wmosci|Area 69|Masculino|
-|Security Guard|71|wmysgrd|Airport Guard Boxes|Masculino|
+|Ped Comun|69|sbfyst|San Andreas|Femenino|
+|Científico|70|wmosci|Area 69|Masculino|
+|Guardia de seguridad|71|wmysgrd|Airport Guard Boxes|Masculino|
 |Hippy|72|swmyhp1|San Andreas|Masculino|
 |Hippy|73|swmyhp2|San Fierro|Masculino|
-|Prostitute|75|swfopro|San Andreas|Femenino|
-|Stewardess|76|wfystew|San Andreas|Femenino|
+|Prostituta|75|swfopro|San Andreas|Femenino|
+|Azafata|76|wfystew|San Andreas|Femenino|
 |Homeless|77|swmotr1|San Andreas|Femenino|
 |Homeless|78|wmotr1|San Andreas|Masculino|
 |Homeless|79|bmotr1|San Andreas|Masculino|
-|Boxer|80|vbmybox|San Andreas Gyms|Masculino|
-|Boxer|81|vwmybox|San Andreas Gyms|Masculino|
-|Black Elvis|82|vhmyelv|Las Venturas|Masculino|
-|White Elvis|83|vbmyelv|Las Venturas|Masculino|
-|Blue Elvis|84|vimyelv|Las Venturas|Masculino|
-|Prostitute|85|vwfypro|San Andreas|Femenino|
+|Boxeador|80|vbmybox|San Andreas Gyms|Masculino|
+|Boxeador|81|vwmybox|San Andreas Gyms|Masculino|
+|Elvis Negro|82|vhmyelv|Las Venturas|Masculino|
+|Elvis Blanco|83|vbmyelv|Las Venturas|Masculino|
+|Elvis Azul|84|vimyelv|Las Venturas|Masculino|
+|Prostituta|85|vwfypro|San Andreas|Femenino|
 |Stripper|87|vwfyst1|San Andreas|Femenino|
-|Normal Ped|88|wfori|San Andreas|Femenino|
-|Normal Ped|89|wfost|San Andreas|Femenino|
-|Jogger|90|wfyjg|San Andreas|Femenino|
+|Ped Comun|88|wfori|San Andreas|Femenino|
+|Ped Comun|89|wfost|San Andreas|Femenino|
+|Corredora|90|wfyjg|San Andreas|Femenino|
 |Rich Woman|91|wfyri|San Andreas|Femenino|
 |Rollerskater|92|wfyro|Beaches of SA|Femenino|
-|Normal Ped|93|wfyst|San Andreas|Femenino|
-|Normal Ped|94|wmori|San Andreas|Masculino|
-|Normal Ped, Works at or owns Dillimore Gas Station|95|wmost|San Andreas|Masculino|
-|Jogger|96|wmyjg|San Andreas|Masculino|
-|Lifeguard|97|wmylg|Beaches|Masculino|
-|Normal Ped|98|wmyri|San Andreas|Masculino|
+|Ped Comun|93|wfyst|San Andreas|Femenino|
+|Ped Comun|94|wmori|San Andreas|Masculino|
+|Ped Comun, Works at or owns Dillimore Gas Station|95|wmost|San Andreas|Masculino|
+|Corredor|96|wmyjg|San Andreas|Masculino|
+|Salvavidas|97|wmylg|Beaches|Masculino|
+|Ped Comun|98|wmyri|San Andreas|Masculino|
 |Rollerskater|99|wmyro|San Andreas|Masculino|
-|Biker|100|wmycr|San Andreas|Masculino|
-|Normal Ped|101|wmyst|San Andreas|Masculino|
+|Ciclista|100|wmycr|San Andreas|Masculino|
+|Ped Comun|101|wmyst|San Andreas|Masculino|
 |Balla|102|ballas1|Los Santos|Masculino|
 |Balla|103|ballas2|Los Santos|Masculino|
 |Balla|104|ballas3|Los Santos|Masculino|
@@ -141,7 +145,7 @@ Lista tomada de [SA-MP wiki](https://sampwiki.blast.hk)
 |Farm Inhabitant|133|dnmolc2|San Andreas|Masculino|
 |Homeless|134|sbmotr2|San Andreas|Masculino|
 |Homeless|135|swmotr2|San Andreas|Masculino|
-|Normal Ped|136|sbmytr3|San Andreas|Masculino|
+|Ped Comun|136|sbmytr3|San Andreas|Masculino|
 |Homeless|137|swmotr3|San Andreas|Masculino|
 |Beach Visitor|138|wfybe|Beaches of SA|Femenino|
 |Beach Visitor|139|bfybe|Beaches of SA|Femenino|
@@ -155,8 +159,8 @@ Lista tomada de [SA-MP wiki](https://sampwiki.blast.hk)
 |Businessman|147|wmybu|San Andreas|Masculino|
 |Businesswoman|148|bfybu|San Andreas|Femenino|
 |Businesswoman|150|wfybu|San Andreas|Femenino|
-|Normal Ped|151|dwfylc1|San Andreas|Femenino|
-|Prostitute|152|wfypro|San Andreas|Femenino|
+|Ped Comun|151|dwfylc1|San Andreas|Femenino|
+|Prostituta|152|wfypro|San Andreas|Femenino|
 |Construction Worker|153|wmyconb|San Andreas|Masculino|
 |Beach Visitor|154|wmybe|Beaches of SA|Masculino|
 |Well Stacked Pizza Worker|155|wmypizz|Well Stacked Pizza co.|Masculino|
@@ -173,8 +177,8 @@ Lista tomada de [SA-MP wiki](https://sampwiki.blast.hk)
 |Black MIB agent|166|bmymib|San Andreas|Masculino|
 |Cluckin' Bell Worker|167|wmybell|Cluckin' Bell|Masculino|
 |Hotdog/Chilli Dog Vendor|168|bmochil|Hotdog vans and chilli dog carts|Masculino|
-|Normal Ped|169|sofyri|San Andreas|Femenino|
-|Normal Ped|170|somyst|San Andreas|Masculino|
+|Ped Comun|169|sofyri|San Andreas|Femenino|
+|Ped Comun|170|somyst|San Andreas|Masculino|
 |Blackjack Dealer|171|vwmybjd|Casinos|Masculino|
 |Casino croupier|172|vwfycrp|Casinos|Femenino|
 |San Fierro Rifa|173|sfr1|San Fierro|Masculino|
@@ -187,12 +191,12 @@ Lista tomada de [SA-MP wiki](https://sampwiki.blast.hk)
 |Tattoo Artist|180|bmytatt|Tattoo Shops|Masculino|
 |Punk|181|vwmycr|San Andreas|Masculino|
 |Cab Driver|182|vbmocd|San Andreas|Masculino|
-|Normal Ped|183|vbmycr|San Andreas|Masculino|
-|Normal Ped|184|vhmycr|San Andreas|Masculino|
-|Normal Ped|185|sbmyri|San Andreas|Masculino|
-|Normal Ped|186|somyri|San Andreas|Masculino|
+|Ped Comun|183|vbmycr|San Andreas|Masculino|
+|Ped Comun|184|vhmycr|San Andreas|Masculino|
+|Ped Comun|185|sbmyri|San Andreas|Masculino|
+|Ped Comun|186|somyri|San Andreas|Masculino|
 |Businessman|187|somybu|San Andreas|Masculino|
-|Normal Ped|188|swmyst|San Andreas|Masculino|
+|Ped Comun|188|swmyst|San Andreas|Masculino|
 |Valet|189|wmyva|San Fierro|Masculino|
 |Barbara Schternvart|190|copgrl3|El Quebrados|Femenino|
 |Helena Wankstein|191|gungrl3|Blueberry|Femenino|
@@ -211,7 +215,7 @@ Lista tomada de [SA-MP wiki](https://sampwiki.blast.hk)
 |Karate Teacher|204|wmykara|San Fierro Gym|Masculino|
 |Burger Shot Cashier|205|wfyburg|Burger Shot|Femenino|
 |Cab Driver|206|vwmycd|San Andreas|Masculino|
-|Prostitute|207|vhfypro|San Andreas|Femenino|
+|Prostituta|207|vhfypro|San Andreas|Femenino|
 |Su Xi Mu (Suzie)|208|suzie|San Fierro|Masculino|
 |Oriental Noodle stand vendor|209|omonood|Noodle stands|Masculino|
 |Oriental Boating School Instructor|210|omoboat|Boating School|Masculino|
@@ -219,46 +223,46 @@ Lista tomada de [SA-MP wiki](https://sampwiki.blast.hk)
 |Homeless|212|vwmotr1|San Andreas|Masculino|
 |Weird old man|213|vwmotr2|San Andreas|Masculino|
 |Waitress (Maria Latore)|214|vwfywai|Caligulas Casino (cutscene only)|Femenino|
-|Normal Ped|215|sbfori|San Andreas|Femenino|
-|Normal Ped|216|swfyri|San Andreas|Femenino|
+|Ped Comun|215|sbfori|San Andreas|Femenino|
+|Ped Comun|216|swfyri|San Andreas|Femenino|
 |Clothes shop staff|217|wmyclot|Clothes shops|Masculino|
-|Normal Ped|218|sbfost|San Andreas|Femenino|
+|Ped Comun|218|sbfost|San Andreas|Femenino|
 |Rich Woman|219|sbfyri|San Andreas|Femenino|
 |Cab Driver|220|sbmocd|San Fierro|Masculino|
-|Normal Ped|221|sbmori|San Andreas|Masculino|
-|Normal Ped|222|sbmost|San Andreas|Masculino|
-|Normal Ped|223|shmycr|San Andreas|Masculino|
-|Normal Ped|224|sofori|San Andreas|Femenino|
-|Normal Ped|225|sofost|San Andreas|Femenino|
-|Normal Ped|226|sofyst|San Andreas|Femenino|
+|Ped Comun|221|sbmori|San Andreas|Masculino|
+|Ped Comun|222|sbmost|San Andreas|Masculino|
+|Ped Comun|223|shmycr|San Andreas|Masculino|
+|Ped Comun|224|sofori|San Andreas|Femenino|
+|Ped Comun|225|sofost|San Andreas|Femenino|
+|Ped Comun|226|sofyst|San Andreas|Femenino|
 |Oriental Businessman|227|somobu|San Andreas|Masculino|
-|Oriental Ped|228|somori|San Andreas|Masculino|
-|Oriental Ped|229|somost|San Andreas|Masculino|
+|Ped Oriental|228|somori|San Andreas|Masculino|
+|Ped Oriental|229|somost|San Andreas|Masculino|
 |Homeless|230|swmotr5|San Andreas|Masculino|
-|Normal Ped|231|swfori|San Andreas|Femenino|
-|Normal Ped|232|swfost|San Andreas|Femenino|
-|Normal Ped|233|swfyst|San Andreas|Femenino|
+|Ped Comun|231|swfori|San Andreas|Femenino|
+|Ped Comun|232|swfost|San Andreas|Femenino|
+|Ped Comun|233|swfyst|San Andreas|Femenino|
 |Cab Driver|234|swmocd|San Andreas|Masculino|
-|Normal Ped|235|swmori|San Andreas|Masculino|
-|Normal Ped|236|swmost|San Andreas|Masculino|
-|Prostitute|237|shfypro|San Andreas|Femenino|
-|Prostitute|238|sbfypro|San Andreas|Femenino|
+|Ped Comun|235|swmori|San Andreas|Masculino|
+|Ped Comun|236|swmost|San Andreas|Masculino|
+|Prostituta|237|shfypro|San Andreas|Femenino|
+|Prostituta|238|sbfypro|San Andreas|Femenino|
 |Homeless|239|swmotr4|San Andreas|Masculino|
 |The D.A|240|swmyri|San Fierro|Masculino|
 |Afro-American|241|smyst|San Andreas|Masculino|
 |Mexican|242|smyst2|San Andreas|Masculino|
-|Prostitute|243|sfypro|San Andreas|Femenino|
+|Prostituta|243|sfypro|San Andreas|Femenino|
 |Stripper|244|vbfyst2|San Andreas|Femenino|
-|Prostitute|245|vbfypro|San Andreas|Femenino|
+|Prostituta|245|vbfypro|San Andreas|Femenino|
 |Stripper|246|vhfyst3|San Andreas|Femenino|
-|Biker|247|bikera|San Andreas|Masculino|
-|Biker|248|bikerb|San Andreas|Masculino|
+|Ciclista|247|bikera|San Andreas|Masculino|
+|Ciclista|248|bikerb|San Andreas|Masculino|
 |Pimp|249|bmypimp|San Fierro|Masculino|
-|Normal Ped|250|swmycr|San Andreas|Masculino|
-|Lifeguard|251|wfylg|Beaches|Femenino|
+|Ped Comun|250|swmycr|San Andreas|Masculino|
+|Salvavidas|251|wfylg|Beaches|Femenino|
 |Naked Valet|252|wmyva2|San Fierro (mission only)|Masculino|
 |Bus Driver|253|bmosec|San Fierro|Masculino|
-|Biker Drug Dealer|254|bikdrug|San Andreas|Masculino|
+|Ciclista Narcotraficante|254|bikdrug|San Andreas|Masculino|
 |Chauffeur (Limo Driver)|255|wmych|San Andreas|Masculino|
 |Stripper|256|sbfystr|San Andreas|Femenino|
 |Stripper|257|swfystr|San Andreas|Femenino|
@@ -267,22 +271,22 @@ Lista tomada de [SA-MP wiki](https://sampwiki.blast.hk)
 |Construction Worker|260|bmycon|San Fierro|Masculino|
 |Cab driver|261|wmycd1|San Andreas|Masculino|
 |Cab driver|262|bmocd|San Andreas|Masculino|
-|Normal Ped|263|vwfywa2|San Andreas|Femenino|
+|Ped Comun|263|vwfywa2|San Andreas|Femenino|
 |Clown (Ice-cream Van Driver)|264|wmoice|San Andreas (Driving ice-cream vans (Mr.Whoopee))|Masculino|
-|Paramedic (Emergency Medical Technician)|274|laemt1|Los Santos|Masculino|
-|Paramedic (Emergency Medical Technician)|275|lvemt1|Las Venturas|Masculino|
-|Paramedic (Emergency Medical Technician)|276|sfemt1|San Fierro|Masculino|
-|Firefighter|277|lafd1|Los Santos|Masculino|
-|Firefighter|278|lvfd1|Las Venturas|Masculino|
-|Firefighter|279|sffd1|San Fierro|Masculino|
-|Los Santos Police Officer|280|lapd1|Los Santos|Masculino|
-|San Fierro Police Officer|281|sfpd1|San Fierro|Masculino|
-|Las Venturas Police Officer|282|lvpd1|Las Venturas|Masculino|
+|Paramedico|274|laemt1|Los Santos|Masculino|
+|Paramedico|275|lvemt1|Las Venturas|Masculino|
+|Paramedico|276|sfemt1|San Fierro|Masculino|
+|Bombero|277|lafd1|Los Santos|Masculino|
+|Bombero|278|lvfd1|Las Venturas|Masculino|
+|Bombero|279|sffd1|San Fierro|Masculino|
+|Policía|280|lapd1|Los Santos|Masculino|
+|Policía|281|sfpd1|San Fierro|Masculino|
+|Policía|282|lvpd1|Las Venturas|Masculino|
 |County Sheriff|283|csher|Countryside|Masculino|
-|LSPD Motorbike Cop|284|lapdm1|San Andreas|Masculino|
-|S.W.A.T Special Forces|285|swat|San Andreas|Masculino|
-|Federal Agent|286|fbi|San Andreas|Masculino|
-|San Andreas Army|287|army|San Andreas|Masculino|
+|Policía en moto de LSPD|284|lapdm1|San Andreas|Masculino|
+|Fuerzas Especiales S.W.A.T|285|swat|San Andreas|Masculino|
+|Agente Federal|286|fbi|San Andreas|Masculino|
+|Soldado|287|army|San Andreas|Masculino|
 |Desert Sheriff|288|dsher|Desert|Masculino|
 
 <script src="../../../js/main.min.js"></script>
