--- a/es/tools.html
+++ b/es/tools.html
@@ -27,8 +27,8 @@ JKSD
 
 :::row
 :::col-6
-:::my-3
-[copiar al portapapeles](#! 'bg-teal black py-2 px-3' `
+:::mx-3
+[copiar al portapapeles](#! 'bg-teal black p-2 py-3' `
   CopyTextContent($('#output'))
 `):::
 :::
